fix(ui): right sidebar scrollbar not work when overflowing vertically

--- a/src/main/frontend/components/sidebar.css
+++ b/src/main/frontend/components/sidebar.css
@@ -380,10 +380,6 @@
   padding: 0;
 }
 
-.scrollbar-spacing {
-  height: 100%;
-}
-
 @supports not (overflow-y: overlay) {
   .scrollbar-spacing {
     overflow-y: auto;
